--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     </div>
   </div>
 
-  <script src="js_arbitrage_research.js" defer></script>
+  <script src="js_arbitrage_research.js"></script>
 </body>
 </html>
