--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <div class="controls">
       <div class="buttons">
-        <button id="pre-game-btn" class="active">Pre-Game (1)</button>
-        <button id="live-btn">Live (0)</button>
+        <button id="pre-game-btn" class="active">Pre-Game)</button>
       </div>
       <div class="dropdowns">
         <select id="league-select">
