--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Free Arbitrage Bet Finder Tool</h1>
+    <h1 class="title"> Arbitrage Bet Finder Tool</h1>
     <p class="description">
-      We monitor odds from online sportsbooks to find arbitrage betting opportunities currently available at online sportsbooks including both pre-game and live arbs. Updates every minute.
+      We continuously monitor odds from online sportsbooks to identify arbitrage betting opportunities, covering both pre-game and live bets.
     </p>
 
     <div class="controls">
       <div class="buttons">
-        <button id="pre-game-btn" class="active">Pre-Game)</button>
+        <button id="pre-game-btn" class="active">Pre-Game</button>
+        <button id="live-game-btn" class="active">Live</button>
+
       </div>
       <div class="dropdowns">
         <select id="league-select">
@@ -23,13 +25,9 @@
           <option value="NFL">NFL</option>
           <option value="NBA">NBA</option>
           <option value="MLB">MLB</option>
+          <option value="NHL">NHL</option>
         </select>
 
-        <select id="state-select">
-          <option value="NY">NY</option>
-          <option value="NJ">NJ</option>
-          <option value="PA">PA</option>
-        </select>
       </div>
     </div>
 
@@ -50,14 +48,29 @@
     <div class="info">
       <h2>How Our Arbitrage Bet Finder Tool Works</h2>
       <p>
-        To find arbitrage bets, we monitor lines from online sportsbooks to find arb bets that are currently available. We check the odds every minute, so you can always find arbitrage bets that are currently available.
+        Our tool monitors sportsbooks for arbitrage betting opportunities by checking odds. An arbitrage bet occurs when the combined odds of both sides of a bet result in a positive number, ensuring a guaranteed profit by betting on both sides.
       </p>
       <p>
-        When the odds of two sides of a bet add up to a positive number, we know we've found an arbitrage bet that will guarantee a profit if you bet both sides of it. That's why you see Bet 1 and Bet 2 in the table above. You have to place both bets to guarantee yourself a profit.
+        To use the tool, check the table showing available arb bets. You’ll find:
       </p>
+      <ul>
+        <li><strong>Event:</strong> Game, league, date, and time.</li>
+        <li><strong>Bet 1 and Bet 2:</strong> The sportsbook, line, and odds for each side.</li>
+        <li><strong>ROI:</strong> The percentage return on your investment.</li>
+      </ul>
+      <h2>How Arbitrage Betting Works</h2>
       <p>
-        How much should you bet? Check out our Arbitrage Calculator to figure out exactly what to wager on each side.
+        Arbitrage betting involves placing bets on both sides of a game at different sportsbooks when there are price discrepancies, ensuring a profit regardless of the outcome. Though profits can be small and opportunities hard to find, using arbitrage betting software simplifies the process.
       </p>
+      <h2>Examples of Arbitrage Betting</h2>
+      <p>
+        For instance, if DraftKings offers the Yankees at +110 and the Red Sox at -105, and FanDuel offers the reverse odds, betting $100 on each side guarantees a profit. By betting on both the Yankees and Red Sox at opposite sportsbooks, you lock in a return regardless of the outcome.
+      </p>
+      <h2>How to Find Arbitrage Opportunities</h2>
+      <p>
+        Identifying favorable pricing requires constant monitoring of multiple sportsbooks. Comparing odds, watching line movements, and taking advantage of promotions or free bets can also reveal arbitrage opportunities.
+      </p>
+      
     </div>
   </div>
 
