--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arbitrage Bet Finder Tool</title>
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="css_arbitrage_research.css">
 </head>
 <body>
@@ -19,8 +18,8 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="#about" class="nav-link">About</a>
-        <a href="#services" class="nav-link">Services</a>
+        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
+        <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
     </div>
@@ -95,7 +94,6 @@
   </div>
 
   <!-- Scripts -->
-  <script src="scripts.js"></script>
   <script src="js_arbitrage_research.js"></script>
 </body>
 </html>
