--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -18,8 +18,8 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="#about" class="nav-link">About</a>
-        <a href="#services" class="nav-link">Services</a>
+        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
+        <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
     </div>
