--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
+        <a href="index.html" class="nav-link">Arbitrage</a>
         <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
