--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="index.html" class="nav-link">Arbitrage</a>
+        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
         <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
@@ -52,8 +52,9 @@
       <thead>
         <tr>
           <th>EVENT</th>
-          <th>BET 1</th>
-          <th>BET 2</th>
+          <th>+EV BET</th>
+          <th>CONSENSUS IMPLIED PROBABILITY</th>
+          <th>+EV BET ODDS</th>
           <th>ROI</th>
         </tr>
       </thead>
