--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arbitrage Bet Finder Tool</title>
+  <title>Positive Expected Value Bet Finder</title>
   <link rel="stylesheet" href="css_arbitrage_research.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="index.html" class="nav-link">Arbitrage</a>
+        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
         <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
@@ -27,9 +27,9 @@
 
   <!-- Main Content Section -->
   <div class="container">
-    <h1 class="title">Arbitrage Bet Finder Tool</h1>
+    <h1 class="title">Positive Expected Value Bet Finder</h1>
     <p class="description">
-      We continuously monitor odds from online sportsbooks to identify arbitrage betting opportunities, covering both pre-game and live bets.
+        We track odds from various online sportsbooks to identify mispriced markets that can lead to profitable outcomes when consistently wagered over time—commonly referred to as positive expected value (+EV) bets. Use our tool below to find currently available +EV bets, and explore more about the mechanics of +EV betting in the following sections.
     </p>
 
     <div class="controls">
@@ -64,33 +64,83 @@
     </table>
 
     <div class="info">
-      <h2>How Our Arbitrage Bet Finder Tool Works</h2>
-      <p>
-        Our tool monitors sportsbooks for arbitrage betting opportunities by checking odds. An arbitrage bet occurs when the combined odds of both sides of a bet result in a positive number, ensuring a guaranteed profit by betting on both sides.
-      </p>
-      <p>
-        To use the tool, check the table showing available arb bets. You’ll find:
-      </p>
-      <ul>
-        <li><strong>Event:</strong> Game, league, date, and time.</li>
-        <li><strong>Bet 1 and Bet 2:</strong> The sportsbook, line, and odds for each side.</li>
-        <li><strong>ROI:</strong> The percentage return on your investment.</li>
-      </ul>
+        <h3>How Our Positive EV Bets Tool Works</h3>
+        <p>Our Positive EV (Expected Value) tool scans online sportsbooks for mispriced odds to identify bets that can return a profit over time. By constantly monitoring odds every minute, we ensure you find currently available +EV bets today.</p>
 
-      <h2>How Arbitrage Betting Works</h2>
-      <p>
-        Arbitrage betting involves placing bets on both sides of a game at different sportsbooks when there are price discrepancies, ensuring a profit regardless of the outcome. Though profits can be small and opportunities hard to find, using arbitrage betting software simplifies the process.
-      </p>
+        <h4>How It Works:</h4>
+        <p>To find a +EV bet, consider this example: If most sportsbooks offer the New York Yankees to win at -130 odds, but one offers them at -105, we assume -130 is the correct price. This makes the -105 odds a better value.</p>
+        <p>However, simply spotting better odds doesn't make a bet +EV. It must also overcome the "vig" or "juice" that sportsbooks charge. For example, if -130 is the correct price for the Yankees, and the no-vig fair odds come out to -119, getting -105 is a positive expected value, meaning you're getting a great deal.</p>
 
-      <h2>Examples of Arbitrage Betting</h2>
-      <p>
-        For instance, if DraftKings offers the Yankees at +110 and the Red Sox at -105, and FanDuel offers the reverse odds, betting $100 on each side guarantees a profit. By betting on both the Yankees and Red Sox at opposite sportsbooks, you lock in a return regardless of the outcome.
-      </p>
+        <h4>Using the Tool:</h4>
+        <ul>
+            <li><strong>Event:</strong> Displays the game details (league, date, time).</li>
+            <li><strong>+EV Bet:</strong> Shows the bet offering +EV and the sportsbook offering it.</li>
+            <li><strong>Consensus No Vig Odds:</strong> Reflects the odds with the vig removed.</li>
+            <li><strong>+EV Bet Odds:</strong> Directly links you to the sportsbook with the +EV bet.</li>
+            <li><strong>ROI:</strong> Displays the long-term expected return based on the bet odds and consensus no-vig odds.</li>
+        </ul>
+        <p>You can filter by league (NFL, NBA, etc.) and state to find +EV bets available in your area.</p>
 
-      <h2>How to Find Arbitrage Opportunities</h2>
-      <p>
-        Identifying favorable pricing requires constant monitoring of multiple sportsbooks. Comparing odds, watching line movements, and taking advantage of promotions or free bets can also reveal arbitrage opportunities.
-      </p>
+        <h4>What is Expected Value (EV)?</h4>
+        <p>Expected value (EV) measures how much a bet is expected to return, typically shown as a percentage. While most bets have negative EV due to the vig, +EV bets are those with a higher expected return than the sportsbook implies. Over time, consistently betting +EV can lead to a profit.</p>
+
+        <h4>Understanding No-Vig Odds:</h4>
+        <p>No-vig odds are the true odds with no sportsbook cut. For example, instead of -110 on both sides of a market, no-vig odds would be +100 on each side, reflecting the true 50/50 probability. By comparing current odds with no-vig odds, you can spot +EV opportunities.</p>
+
+        <p>In short, our tool does the hard work of finding these bets by comparing odds across sportsbooks, saving you the effort of manually checking multiple sites.</p>
+
+        <h4>Calculating Return on Investment (ROI) for Sports Betting</h4>
+        <p>To calculate the Return on Investment (ROI) for sports betting using the consensus no-vig odds and your +EV bet, you can follow these steps:</p>
+
+        <h5>Formula for ROI</h5>
+        <div class="formula">
+            ROI = (Total Profit / Total Stake) × 100
+        </div>
+
+        <h5>Steps to Calculate ROI</h5>
+        <ol>
+            <li><strong>Determine Your Bet Amount:</strong> Let's say you are betting $100.</li>
+            <li><strong>Find the Consensus No-Vig Odds:</strong> For example, if the consensus no-vig odds are +250, this means that for every $100 wagered, you would win $250.</li>
+            <li><strong>Calculate Potential Profit from Your Bet:</strong>
+                <div class="formula">
+                    Potential Profit = (Consensus No-Vig Odds / 100) * Bet Amount
+                </div>
+                <p>Example: If your no-vig odds are +250, potential profit = (250 / 100) * 100 = $250.</p>
+            </li>
+            <li><strong>Calculate the Expected Value (EV):</strong>
+                <div class="formula">
+                    EV = (Probability of Winning * Potential Profit) - (Probability of Losing * Bet Amount)
+                </div>
+                <p>You'll need to estimate the probability of winning. For instance, if you believe you have a 40% chance of winning, your EV would be:</p>
+                <p>EV = (0.40 * 250) - (0.60 * 100) = $100 - $60 = $40.</p>
+            </li>
+            <li><strong>Calculate Total Profit:</strong>
+                <p>Total Profit = EV (if the bet wins) or -Bet Amount (if the bet loses).</p>
+                <ul>
+                    <li>If you win: Total Profit = $250 - $100 = $150.</li>
+                    <li>If you lose: Total Profit = -$100.</li>
+                </ul>
+            </li>
+            <li><strong>Calculate ROI:</strong>
+                <p>Use the ROI formula from Step 2.</p>
+                <ul>
+                    <li>If the bet wins: ROI = ($150 / $100) * 100 = 150%.</li>
+                    <li>If the bet loses: ROI = (-$100 / $100) * 100 = -100%.</li>
+                </ul>
+            </li>
+        </ol>
+
+        <h5>Example</h5>
+        <p>Let's summarize with an example:</p>
+        <ul>
+            <li>Bet Amount: $100</li>
+            <li>Consensus No-Vig Odds: +250</li>
+            <li>Probability of Winning: 40%</li>
+            <li>Potential Profit = $250</li>
+            <li>EV = (0.40 * 250) - (0.60 * 100) = $40</li>
+            <li>If you win: ROI = ($150 / $100) * 100 = 150%.</li>
+            <li>If you lose: ROI = (-$100 / $100) * 100 = -100%.</li>
+        </ul>
     </div>
   </div>
 
