--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -32,6 +32,18 @@
         We track odds from various online sportsbooks to identify mispriced markets that can lead to profitable outcomes when consistently wagered over time—commonly referred to as positive expected value (+EV) bets. Use our tool below to find currently available +EV bets, and explore more about the mechanics of +EV betting in the following sections.
     </p>
 
+    <div class="controls">
+      <!-- Removed Pre-Game and Live buttons -->
+      <div class="dropdowns">
+        <select id="league-select">
+          <option value="NFL">NFL</option>
+          <option value="NBA">NBA</option>
+          <option value="MLB">MLB</option>
+          <option value="NHL">NHL</option>
+        </select>
+      </div>
+    </div>
+
     <table class="bet-table">
       <thead>
         <tr>
