--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -33,9 +33,13 @@
     </p>
 
     <div class="controls">
-      <!-- Removed Pre-Game and Live buttons -->
+      <div class="buttons">
+        <button id="pre-game-btn" class="active">Pre-Game</button>
+        <button id="live-game-btn" class="active">Live</button>
+      </div>
       <div class="dropdowns">
         <select id="league-select">
+          <option value="All">All</option>
           <option value="NFL">NFL</option>
           <option value="NBA">NBA</option>
           <option value="MLB">MLB</option>
