--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -34,8 +34,17 @@
 
     <div class="controls">
       <div class="buttons">
+        <button id="pre-game-btn" class="active">Pre-Game</button>
+        <button id="live-game-btn" class="active">Live</button>
       </div>
       <div class="dropdowns">
+        <select id="league-select">
+          <option value="All">All</option>
+          <option value="NFL">NFL</option>
+          <option value="NBA">NBA</option>
+          <option value="MLB">MLB</option>
+          <option value="NHL">NHL</option>
+        </select>
       </div>
     </div>
 
