--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -65,8 +65,7 @@ function calculateROI(outcomes) {
 
 // Tab switching functionality
 const preGameBtn = document.getElementById('pre-game-btn');
-let liveBtn = document.getElementById('live-game-btn');
-liveBtn.addEventListener('click', () => {});
+const liveBtn = document.getElementById('live-game-btn');
 
 preGameBtn.addEventListener('click', function () {
     preGameBtn.classList.add('active');
