--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navbar-links" id="navbar-links">
         <a href="#home" class="nav-link">Home</a>
-        <a href="index.html" class="nav-link">Arbitrage</a>
+        <a href="html_arbitrage_research.html" class="nav-link">Arbitrage</a>
         <a href="html_ev_research.html" class="nav-link">+EV</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
@@ -35,16 +35,6 @@
     <div class="controls">
       <div class="buttons">
         <button id="pre-game-btn" class="active">Pre-Game</button>
-        <button id="live-game-btn" class="active">Live</button>
-      </div>
-      <div class="dropdowns">
-        <select id="league-select">
-          <option value="All">All</option>
-          <option value="NFL">NFL</option>
-          <option value="NBA">NBA</option>
-          <option value="MLB">MLB</option>
-          <option value="NHL">NHL</option>
-        </select>
       </div>
     </div>
 
