--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="controls">
       <div class="buttons">
         <button id="pre-game-btn" class="active">Pre-Game</button>
+        <button id="live-game-btn" class="active">Live</button>
       </div>
     </div>
 
