--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
       <div class="buttons">
         <button id="pre-game-btn" class="active">Pre-Game</button>
       </div>
-      <div>
-        id= "lastFoundAt"
-      </div>
+      <div id="lastFoundAt"></div> <!-- Corrected the syntax -->
     </div>
 
     <table class="bet-table">
