--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <div class="container">
     <h1 class="title">Arbitrage Bet Finder Tool</h1>
     <p class="description">
-      We continuously monitor odds from online sportsbooks to identify arbitrage betting opportunities, covering both pre-game and live bets.
+      We continuously monitor odds from online sportsbooks to identify arbitrage betting opportunities, covering both pre-game and live bets. For help calculating the numbers and guaranteeing a profit, check out <a href="https://arbitragecalc.com/" target="_blank">this Arbitrage Calculator</a>.
     </p>
 
     <div class="controls">
       <div class="buttons">
         <button id="pre-game-btn" class="active">Pre-Game</button>
       </div>
-      <div id="lastFoundAt"></div> <!-- Corrected the syntax -->
+      <div id="lastFoundAt"></div>
     </div>
 
     <table class="bet-table">
