--- a/html_ev_research.html
+++ b/html_ev_research.html
@@ -29,7 +29,8 @@
   <div class="container">
     <h1 class="title">Positive Expected Value Bet Finder</h1>
     <p class="description">
-        We track odds from various online sportsbooks to identify mispriced markets that can lead to profitable outcomes when consistently wagered over time—commonly referred to as positive expected value (+EV) bets. Use our tool below to find currently available +EV bets, and explore more about the mechanics of +EV betting in the following sections.
+        We track odds from various online sportsbooks to identify mispriced markets that can lead to profitable outcomes when consistently wagered over time—commonly referred to as positive expected value (+EV) bets. Use our tool below to find currently available +EV bets, and explore more about the mechanics of +EV betting in the following sections. <br> <br>
+        For help calculating the numbers and guaranteeing a profit, check out <a href="https://www.aceodds.com/bet-calculator/odds-converter.html" target="_blank">this Odds Converter</a>.
     </p>
 
     <div class="controls">
